feat: add comentCount to post detail response